# no-nonsense-notes

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml
apps/android/: README.md  TODO.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/ios/: README.md  TODO.md
apps/macos/: README.md  TODO.md
apps/web/: .env.example  README.md  TODO.md  index.html  package-lock.json  package.json
apps/web/public/: site.webmanifest
apps/web/src/: App.tsx  index.css  loro-crdt-web.d.ts  router-pages.tsx  router.tsx
apps/web/src/components/: auth-page.tsx  brand.tsx  note-editor.tsx  notes-list.tsx  sync-badge.tsx  theme-toggle.tsx
apps/web/src/components/__tests__/: note-editor.test.tsx  notes-list-realtime.test.tsx  sync-status-bar.test.tsx
apps/web/src/components/auth-page/: auth-card.tsx  auth-header.tsx  marketing-panel.tsx
apps/web/src/components/note-editor/: checklist-editor.tsx  editor-header.tsx  editor-meta.tsx  markdown-editor.tsx  model.ts  (+3 more)
apps/web/src/generated-wasm/: no_nonsense_notes_wasm.d.ts
apps/web/src/hooks/: use-sync.ts
apps/web/src/lib/: api.ts  auth-context.tsx  auth.ts  loro-init.ts  loro-store.ts  sync-context.tsx  sync-manager.ts  wasm.ts
crates/android-ffi/: Cargo.toml  README.md  uniffi.toml
crates/android-ffi/src/: lib.rs  records.rs  store.rs  sync.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/benches/: loro.rs
crates/core/src/: error.rs  folder.rs  import_export.rs  lib.rs  markdown.rs  note.rs  search.rs  tag.rs
crates/core/src/crypto/: device.rs  encrypt.rs  key_derivation.rs  mod.rs
crates/core/src/storage/: memory.rs  migrations.rs  mod.rs  native.rs  note_repo.rs  sqlite.rs
crates/core/src/storage/memory/: lists.rs  notes.rs  query.rs  sync.rs
crates/core/src/storage/memory/tests/: lists.rs  mod.rs  notes.rs  query.rs  sync.rs
crates/core/src/storage/migrations/: 001_initial.sql  002_add_note_type.sql  003_native_sync_state.sql  mod.rs
crates/core/src/storage/migrations/tests/: constraints.rs  execution.rs  mod.rs  note_schema.rs  schema.rs
crates/core/src/storage/native/: notes.rs  pull.rs  queue.rs  settings.rs
crates/core/src/storage/note_repo/: lists.rs  notes.rs  query.rs  sync.rs
crates/core/src/storage/note_repo/tests/: create.rs  lists.rs  mod.rs  query.rs  update.rs
crates/core/src/sync/: client.rs  mod.rs  protocol.rs
crates/core/src/sync/client/: worker.rs
crates/core/src/sync/client/worker/: connected.rs
crates/core/src/sync/protocol/: blob.rs  frame.rs  pull.rs
crates/core/src/sync/protocol/tests/: blob.rs  frame.rs  mod.rs  pull.rs
crates/core/tests/: loro_gate.rs
crates/migration-build/: Cargo.toml  README.md
crates/migration-build/src/: lib.rs
crates/server/: Cargo.toml  README.md  build.rs
crates/server/src/: auth.rs  error.rs  lib.rs  main.rs  sync.rs
crates/server/src/auth/: handlers.rs  password.rs  token.rs
crates/server/src/auth/handlers/: signin.rs  signup.rs
crates/server/src/storage/: mod.rs  sqlite.rs
crates/server/src/storage/migrations/: 001_initial.sql  002_scope_updates_by_account.sql  003_purge_legacy_updates.sql  mod.rs
crates/server/src/storage/migrations/tests/: constraints.rs  execution.rs  mod.rs  schema.rs
crates/server/src/sync/: messages.rs  socket.rs
crates/server/tests/: integration_test.rs
crates/server/tests/integration_test/: auth.rs  support.rs  sync_notifications.rs  sync_push_pull.rs  sync_rejection.rs
crates/uniffi-bindgen/: Cargo.toml  README.md
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: js.rs  lib.rs  storage.rs  store.rs  wire.rs
crates/wasm/src/store/: notes.rs  sync_state.rs
crates/wasm/src/store/notes/: lists.rs  query.rs  remote.rs
crates/wasm/src/tests/: mod.rs  notes.rs  sync.rs  wire.rs
docs/: README.md  domain-model.md  editor.md  roadmap.md  security.md  sync.md  tech-stack.md  testing.md
scripts/: android.sh  build-android-rust.sh  dev.sh  web.sh
(+29 files in other folders)
