[package]
name = "no-nonsense-notes-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
loro = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

