[package]
name = "no-nonsense-notes-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled"] }
argon2 = "0.5"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dotenvy = "0.15"
futures = "0.3"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
migration-build = { path = "../migration-build" }

[build-dependencies]
migration-build = { path = "../migration-build" }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.29"
